// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchFilters Rendering matches snapshot 1`] = `
<div>
  <div
    class="search-filters"
  >
    <div
      class="ant-space ant-space-horizontal ant-space-align-center search-filters__container"
      style="flex-wrap: wrap; margin-bottom: -4px;"
    >
      <div
        class="ant-space-item"
        style="margin-right: 4px; padding-bottom: 4px;"
      >
        <span
          class="ant-tag ant-tag-checkable search-filters__tag"
          style="border: 1px solid #d9d9d9; color: rgb(89, 89, 89);"
        >
          <div
            class="ant-space ant-space-horizontal ant-space-align-center"
          >
            <div
              class="ant-space-item"
              style="margin-right: 4px;"
            >
              <span
                aria-label="environment"
                class="anticon anticon-environment"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="environment"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M854.6 289.1a362.49 362.49 0 00-79.9-115.7 370.83 370.83 0 00-118.2-77.8C610.7 76.6 562.1 67 512 67c-50.1 0-98.7 9.6-144.5 28.5-44.3 18.3-84 44.5-118.2 77.8A363.6 363.6 0 00169.4 289c-19.5 45-29.4 92.8-29.4 142 0 70.6 16.9 140.9 50.1 208.7 26.7 54.5 64 107.6 111 158.1 80.3 86.2 164.5 138.9 188.4 153a43.9 43.9 0 0022.4 6.1c7.8 0 15.5-2 22.4-6.1 23.9-14.1 108.1-66.8 188.4-153 47-50.4 84.3-103.6 111-158.1C867.1 572 884 501.8 884 431.1c0-49.2-9.9-97-29.4-142zM512 880.2c-65.9-41.9-300-207.8-300-449.1 0-77.9 31.1-151.1 87.6-206.3C356.3 169.5 431.7 139 512 139s155.7 30.5 212.4 85.9C780.9 280 812 353.2 812 431.1c0 241.3-234.1 407.2-300 449.1zm0-617.2c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm79.2 255.2A111.6 111.6 0 01512 551c-29.9 0-58-11.7-79.2-32.8A111.6 111.6 0 01400 439c0-29.9 11.7-58 32.8-79.2C454 338.6 482.1 327 512 327c29.9 0 58 11.6 79.2 32.8C612.4 381 624 409.1 624 439c0 29.9-11.6 58-32.8 79.2z"
                  />
                </svg>
              </span>
            </div>
            <div
              class="ant-space-item"
              style="margin-right: 4px;"
            >
              <span>
                Mines
              </span>
            </div>
            <div
              class="ant-space-item"
            >
              <span
                class="search-filters__count"
              >
                (
                10
                )
              </span>
            </div>
          </div>
        </span>
      </div>
      <div
        class="ant-space-item"
        style="margin-right: 4px; padding-bottom: 4px;"
      >
        <span
          class="ant-tag ant-tag-checkable search-filters__tag"
          style="border: 1px solid #d9d9d9; color: rgb(89, 89, 89);"
        >
          <div
            class="ant-space ant-space-horizontal ant-space-align-center"
          >
            <div
              class="ant-space-item"
              style="margin-right: 4px;"
            >
              <span
                aria-label="user"
                class="anticon anticon-user"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="user"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
                  />
                </svg>
              </span>
            </div>
            <div
              class="ant-space-item"
              style="margin-right: 4px;"
            >
              <span>
                People
              </span>
            </div>
            <div
              class="ant-space-item"
            >
              <span
                class="search-filters__count"
              >
                (
                5
                )
              </span>
            </div>
          </div>
        </span>
      </div>
      <div
        class="ant-space-item"
        style="margin-right: 4px; padding-bottom: 4px;"
      >
        <span
          class="ant-tag ant-tag-checkable search-filters__tag"
          style="border: 1px solid #d9d9d9; color: rgb(89, 89, 89);"
        >
          <div
            class="ant-space ant-space-horizontal ant-space-align-center"
          >
            <div
              class="ant-space-item"
              style="margin-right: 4px;"
            >
              <span
                aria-label="bank"
                class="anticon anticon-bank"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="bank"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M894 462c30.9 0 43.8-39.7 18.7-58L530.8 126.2a31.81 31.81 0 00-37.6 0L111.3 404c-25.1 18.2-12.2 58 18.8 58H192v374h-72c-4.4 0-8 3.6-8 8v52c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-52c0-4.4-3.6-8-8-8h-72V462h62zM512 196.7l271.1 197.2H240.9L512 196.7zM264 462h117v374H264V462zm189 0h117v374H453V462zm307 374H642V462h118v374z"
                  />
                </svg>
              </span>
            </div>
            <div
              class="ant-space-item"
              style="margin-right: 4px;"
            >
              <span>
                Organizations
              </span>
            </div>
            <div
              class="ant-space-item"
            >
              <span
                class="search-filters__count"
              >
                (
                3
                )
              </span>
            </div>
          </div>
        </span>
      </div>
      <div
        class="ant-space-item"
        style="margin-right: 4px; padding-bottom: 4px;"
      >
        <span
          class="ant-tag ant-tag-checkable search-filters__tag"
          style="border: 1px solid #d9d9d9; color: rgb(89, 89, 89);"
        >
          <div
            class="ant-space ant-space-horizontal ant-space-align-center"
          >
            <div
              class="ant-space-item"
              style="margin-right: 4px;"
            >
              <span
                aria-label="file-protect"
                class="anticon anticon-file-protect"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="file-protect"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M644.7 669.2a7.92 7.92 0 00-6.5-3.3H594c-6.5 0-10.3 7.4-6.5 12.7l73.8 102.1c3.2 4.4 9.7 4.4 12.9 0l114.2-158c3.8-5.3 0-12.7-6.5-12.7h-44.3c-2.6 0-5 1.2-6.5 3.3l-63.5 87.8-22.9-31.9zM688 306v-48c0-4.4-3.6-8-8-8H296c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h384c4.4 0 8-3.6 8-8zm-392 88c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h184c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H296zm184 458H208V148h560v296c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V108c0-17.7-14.3-32-32-32H168c-17.7 0-32 14.3-32 32v784c0 17.7 14.3 32 32 32h312c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm402.6-320.8l-192-66.7c-.9-.3-1.7-.4-2.6-.4s-1.8.1-2.6.4l-192 66.7a7.96 7.96 0 00-5.4 7.5v251.1c0 2.5 1.1 4.8 3.1 6.3l192 150.2c1.4 1.1 3.2 1.7 4.9 1.7s3.5-.6 4.9-1.7l192-150.2c1.9-1.5 3.1-3.8 3.1-6.3V538.7c0-3.4-2.2-6.4-5.4-7.5zM826 763.7L688 871.6 550 763.7V577l138-48 138 48v186.7z"
                  />
                </svg>
              </span>
            </div>
            <div
              class="ant-space-item"
              style="margin-right: 4px;"
            >
              <span>
                Permits
              </span>
            </div>
            <div
              class="ant-space-item"
            >
              <span
                class="search-filters__count"
              >
                (
                8
                )
              </span>
            </div>
          </div>
        </span>
      </div>
      <div
        class="ant-space-item"
        style="margin-right: 4px; padding-bottom: 4px;"
      >
        <span
          class="ant-tag ant-tag-checkable search-filters__tag"
          style="border: 1px solid #d9d9d9; color: rgb(89, 89, 89);"
        >
          <div
            class="ant-space ant-space-horizontal ant-space-align-center"
          >
            <div
              class="ant-space-item"
              style="margin-right: 4px;"
            >
              <span
                aria-label="alert"
                class="anticon anticon-alert"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="alert"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M193 796c0 17.7 14.3 32 32 32h574c17.7 0 32-14.3 32-32V563c0-176.2-142.8-319-319-319S193 386.8 193 563v233zm72-233c0-136.4 110.6-247 247-247s247 110.6 247 247v193H404V585c0-5.5-4.5-10-10-10h-44c-5.5 0-10 4.5-10 10v171h-75V563zm-48.1-252.5l39.6-39.6c3.1-3.1 3.1-8.2 0-11.3l-67.9-67.9a8.03 8.03 0 00-11.3 0l-39.6 39.6a8.03 8.03 0 000 11.3l67.9 67.9c3.1 3.1 8.1 3.1 11.3 0zm669.6-79.2l-39.6-39.6a8.03 8.03 0 00-11.3 0l-67.9 67.9a8.03 8.03 0 000 11.3l39.6 39.6c3.1 3.1 8.2 3.1 11.3 0l67.9-67.9c3.1-3.2 3.1-8.2 0-11.3zM832 892H192c-17.7 0-32 14.3-32 32v24c0 4.4 3.6 8 8 8h688c4.4 0 8-3.6 8-8v-24c0-17.7-14.3-32-32-32zM484 180h56c4.4 0 8-3.6 8-8V76c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v96c0 4.4 3.6 8 8 8z"
                  />
                </svg>
              </span>
            </div>
            <div
              class="ant-space-item"
              style="margin-right: 4px;"
            >
              <span>
                Explosives
              </span>
            </div>
            <div
              class="ant-space-item"
            >
              <span
                class="search-filters__count"
              >
                (
                2
                )
              </span>
            </div>
          </div>
        </span>
      </div>
      <div
        class="ant-space-item"
        style="margin-right: 4px; padding-bottom: 4px;"
      >
        <span
          class="ant-tag ant-tag-checkable search-filters__tag"
          style="border: 1px solid #d9d9d9; color: rgb(89, 89, 89);"
        >
          <div
            class="ant-space ant-space-horizontal ant-space-align-center"
          >
            <div
              class="ant-space-item"
              style="margin-right: 4px;"
            >
              <span
                aria-label="file-search"
                class="anticon anticon-file-search"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="file-search"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M688 312v-48c0-4.4-3.6-8-8-8H296c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h384c4.4 0 8-3.6 8-8zm-392 88c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h184c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H296zm144 452H208V148h560v344c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V108c0-17.7-14.3-32-32-32H168c-17.7 0-32 14.3-32 32v784c0 17.7 14.3 32 32 32h272c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm445.7 51.5l-93.3-93.3C814.7 780.7 828 743.9 828 704c0-97.2-78.8-176-176-176s-176 78.8-176 176 78.8 176 176 176c35.8 0 69-10.7 96.8-29l94.7 94.7c1.6 1.6 3.6 2.3 5.6 2.3s4.1-.8 5.6-2.3l31-31a7.9 7.9 0 000-11.2zM652 816c-61.9 0-112-50.1-112-112s50.1-112 112-112 112 50.1 112 112-50.1 112-112 112z"
                  />
                </svg>
              </span>
            </div>
            <div
              class="ant-space-item"
              style="margin-right: 4px;"
            >
              <span>
                NoW
              </span>
            </div>
            <div
              class="ant-space-item"
            >
              <span
                class="search-filters__count"
              >
                (
                4
                )
              </span>
            </div>
          </div>
        </span>
      </div>
      <div
        class="ant-space-item"
        style="margin-right: 4px; padding-bottom: 4px;"
      >
        <span
          class="ant-tag ant-tag-checkable search-filters__tag"
          style="border: 1px solid #d9d9d9; color: rgb(89, 89, 89);"
        >
          <div
            class="ant-space ant-space-horizontal ant-space-align-center"
          >
            <div
              class="ant-space-item"
              style="margin-right: 4px;"
            >
              <span
                aria-label="exception"
                class="anticon anticon-exception"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="exception"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M688 312v-48c0-4.4-3.6-8-8-8H296c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h384c4.4 0 8-3.6 8-8zm-392 88c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h184c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H296zm376 116c-119.3 0-216 96.7-216 216s96.7 216 216 216 216-96.7 216-216-96.7-216-216-216zm107.5 323.5C750.8 868.2 712.6 884 672 884s-78.8-15.8-107.5-44.5C535.8 810.8 520 772.6 520 732s15.8-78.8 44.5-107.5C593.2 595.8 631.4 580 672 580s78.8 15.8 107.5 44.5C808.2 653.2 824 691.4 824 732s-15.8 78.8-44.5 107.5zM640 812a32 32 0 1064 0 32 32 0 10-64 0zm12-64h40c4.4 0 8-3.6 8-8V628c0-4.4-3.6-8-8-8h-40c-4.4 0-8 3.6-8 8v112c0 4.4 3.6 8 8 8zM440 852H208V148h560v344c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V108c0-17.7-14.3-32-32-32H168c-17.7 0-32 14.3-32 32v784c0 17.7 14.3 32 32 32h272c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8z"
                  />
                </svg>
              </span>
            </div>
            <div
              class="ant-space-item"
              style="margin-right: 4px;"
            >
              <span>
                NODs
              </span>
            </div>
            <div
              class="ant-space-item"
            >
              <span
                class="search-filters__count"
              >
                (
                1
                )
              </span>
            </div>
          </div>
        </span>
      </div>
      <div
        class="ant-space-item"
        style="padding-bottom: 4px;"
      >
        <span
          class="ant-tag ant-tag-checkable search-filters__tag"
          style="border: 1px solid #d9d9d9; color: rgb(89, 89, 89);"
        >
          <div
            class="ant-space ant-space-horizontal ant-space-align-center"
          >
            <div
              class="ant-space-item"
              style="margin-right: 4px;"
            >
              <span
                aria-label="file-search"
                class="anticon anticon-file-search"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="file-search"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M688 312v-48c0-4.4-3.6-8-8-8H296c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h384c4.4 0 8-3.6 8-8zm-392 88c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h184c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H296zm144 452H208V148h560v344c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V108c0-17.7-14.3-32-32-32H168c-17.7 0-32 14.3-32 32v784c0 17.7 14.3 32 32 32h272c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm445.7 51.5l-93.3-93.3C814.7 780.7 828 743.9 828 704c0-97.2-78.8-176-176-176s-176 78.8-176 176 78.8 176 176 176c35.8 0 69-10.7 96.8-29l94.7 94.7c1.6 1.6 3.6 2.3 5.6 2.3s4.1-.8 5.6-2.3l31-31a7.9 7.9 0 000-11.2zM652 816c-61.9 0-112-50.1-112-112s50.1-112 112-112 112 50.1 112 112-50.1 112-112 112z"
                  />
                </svg>
              </span>
            </div>
            <div
              class="ant-space-item"
              style="margin-right: 4px;"
            >
              <span>
                Documents
              </span>
            </div>
            <div
              class="ant-space-item"
            >
              <span
                class="search-filters__count"
              >
                (
                22
                )
              </span>
            </div>
          </div>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`SearchFilters Rendering matches snapshot when on mine page 1`] = `
<div>
  <div
    class="search-filters"
  >
    <div
      class="ant-space ant-space-horizontal ant-space-align-center search-filters__container"
      style="flex-wrap: wrap; margin-bottom: -4px;"
    >
      <div
        class="ant-space-item"
        style="margin-right: 4px; padding-bottom: 4px;"
      >
        <span
          class="ant-tag ant-tag-checkable ant-tag-checkable-checked search-filters__tag search-filters__tag--mine-scope checked"
        >
          <div
            class="ant-space ant-space-horizontal ant-space-align-center"
          >
            <div
              class="ant-space-item"
              style="margin-right: 4px;"
            >
              <span
                aria-label="aim"
                class="anticon anticon-aim"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="aim"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <defs>
                    <style />
                  </defs>
                  <path
                    d="M952 474H829.8C812.5 327.6 696.4 211.5 550 194.2V72c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v122.2C327.6 211.5 211.5 327.6 194.2 474H72c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h122.2C211.5 696.4 327.6 812.5 474 829.8V952c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V829.8C696.4 812.5 812.5 696.4 829.8 550H952c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8zM512 756c-134.8 0-244-109.2-244-244s109.2-244 244-244 244 109.2 244 244-109.2 244-244 244z"
                  />
                  <path
                    d="M512 392c-32.1 0-62.1 12.4-84.8 35.2-22.7 22.7-35.2 52.7-35.2 84.8s12.5 62.1 35.2 84.8C449.9 619.4 480 632 512 632s62.1-12.5 84.8-35.2C619.4 574.1 632 544 632 512s-12.5-62.1-35.2-84.8A118.57 118.57 0 00512 392z"
                  />
                </svg>
              </span>
            </div>
            <div
              class="ant-space-item"
            >
              <span>
                This Mine
              </span>
            </div>
          </div>
        </span>
      </div>
      <div
        class="ant-space-item"
        style="margin-right: 4px; padding-bottom: 4px;"
      >
        <div
          class="ant-divider ant-divider-vertical search-filters__divider"
          role="separator"
        />
      </div>
      <div
        class="ant-space-item"
        style="margin-right: 4px; padding-bottom: 4px;"
      >
        <span
          class="ant-tag ant-tag-checkable search-filters__tag"
          style="border: 1px solid #d9d9d9; color: rgb(89, 89, 89);"
        >
          <div
            class="ant-space ant-space-horizontal ant-space-align-center"
          >
            <div
              class="ant-space-item"
              style="margin-right: 4px;"
            >
              <span
                aria-label="environment"
                class="anticon anticon-environment"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="environment"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M854.6 289.1a362.49 362.49 0 00-79.9-115.7 370.83 370.83 0 00-118.2-77.8C610.7 76.6 562.1 67 512 67c-50.1 0-98.7 9.6-144.5 28.5-44.3 18.3-84 44.5-118.2 77.8A363.6 363.6 0 00169.4 289c-19.5 45-29.4 92.8-29.4 142 0 70.6 16.9 140.9 50.1 208.7 26.7 54.5 64 107.6 111 158.1 80.3 86.2 164.5 138.9 188.4 153a43.9 43.9 0 0022.4 6.1c7.8 0 15.5-2 22.4-6.1 23.9-14.1 108.1-66.8 188.4-153 47-50.4 84.3-103.6 111-158.1C867.1 572 884 501.8 884 431.1c0-49.2-9.9-97-29.4-142zM512 880.2c-65.9-41.9-300-207.8-300-449.1 0-77.9 31.1-151.1 87.6-206.3C356.3 169.5 431.7 139 512 139s155.7 30.5 212.4 85.9C780.9 280 812 353.2 812 431.1c0 241.3-234.1 407.2-300 449.1zm0-617.2c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm79.2 255.2A111.6 111.6 0 01512 551c-29.9 0-58-11.7-79.2-32.8A111.6 111.6 0 01400 439c0-29.9 11.7-58 32.8-79.2C454 338.6 482.1 327 512 327c29.9 0 58 11.6 79.2 32.8C612.4 381 624 409.1 624 439c0 29.9-11.6 58-32.8 79.2z"
                  />
                </svg>
              </span>
            </div>
            <div
              class="ant-space-item"
              style="margin-right: 4px;"
            >
              <span>
                Mines
              </span>
            </div>
            <div
              class="ant-space-item"
            >
              <span
                class="search-filters__count"
              >
                (
                10
                )
              </span>
            </div>
          </div>
        </span>
      </div>
      <div
        class="ant-space-item"
        style="margin-right: 4px; padding-bottom: 4px;"
      >
        <span
          class="ant-tag ant-tag-checkable search-filters__tag"
          style="border: 1px solid #d9d9d9; color: rgb(89, 89, 89);"
        >
          <div
            class="ant-space ant-space-horizontal ant-space-align-center"
          >
            <div
              class="ant-space-item"
              style="margin-right: 4px;"
            >
              <span
                aria-label="user"
                class="anticon anticon-user"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="user"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
                  />
                </svg>
              </span>
            </div>
            <div
              class="ant-space-item"
              style="margin-right: 4px;"
            >
              <span>
                People
              </span>
            </div>
            <div
              class="ant-space-item"
            >
              <span
                class="search-filters__count"
              >
                (
                5
                )
              </span>
            </div>
          </div>
        </span>
      </div>
      <div
        class="ant-space-item"
        style="margin-right: 4px; padding-bottom: 4px;"
      >
        <span
          class="ant-tag ant-tag-checkable search-filters__tag"
          style="border: 1px solid #d9d9d9; color: rgb(89, 89, 89);"
        >
          <div
            class="ant-space ant-space-horizontal ant-space-align-center"
          >
            <div
              class="ant-space-item"
              style="margin-right: 4px;"
            >
              <span
                aria-label="bank"
                class="anticon anticon-bank"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="bank"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M894 462c30.9 0 43.8-39.7 18.7-58L530.8 126.2a31.81 31.81 0 00-37.6 0L111.3 404c-25.1 18.2-12.2 58 18.8 58H192v374h-72c-4.4 0-8 3.6-8 8v52c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-52c0-4.4-3.6-8-8-8h-72V462h62zM512 196.7l271.1 197.2H240.9L512 196.7zM264 462h117v374H264V462zm189 0h117v374H453V462zm307 374H642V462h118v374z"
                  />
                </svg>
              </span>
            </div>
            <div
              class="ant-space-item"
              style="margin-right: 4px;"
            >
              <span>
                Organizations
              </span>
            </div>
            <div
              class="ant-space-item"
            >
              <span
                class="search-filters__count"
              >
                (
                3
                )
              </span>
            </div>
          </div>
        </span>
      </div>
      <div
        class="ant-space-item"
        style="margin-right: 4px; padding-bottom: 4px;"
      >
        <span
          class="ant-tag ant-tag-checkable search-filters__tag"
          style="border: 1px solid #d9d9d9; color: rgb(89, 89, 89);"
        >
          <div
            class="ant-space ant-space-horizontal ant-space-align-center"
          >
            <div
              class="ant-space-item"
              style="margin-right: 4px;"
            >
              <span
                aria-label="file-protect"
                class="anticon anticon-file-protect"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="file-protect"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M644.7 669.2a7.92 7.92 0 00-6.5-3.3H594c-6.5 0-10.3 7.4-6.5 12.7l73.8 102.1c3.2 4.4 9.7 4.4 12.9 0l114.2-158c3.8-5.3 0-12.7-6.5-12.7h-44.3c-2.6 0-5 1.2-6.5 3.3l-63.5 87.8-22.9-31.9zM688 306v-48c0-4.4-3.6-8-8-8H296c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h384c4.4 0 8-3.6 8-8zm-392 88c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h184c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H296zm184 458H208V148h560v296c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V108c0-17.7-14.3-32-32-32H168c-17.7 0-32 14.3-32 32v784c0 17.7 14.3 32 32 32h312c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm402.6-320.8l-192-66.7c-.9-.3-1.7-.4-2.6-.4s-1.8.1-2.6.4l-192 66.7a7.96 7.96 0 00-5.4 7.5v251.1c0 2.5 1.1 4.8 3.1 6.3l192 150.2c1.4 1.1 3.2 1.7 4.9 1.7s3.5-.6 4.9-1.7l192-150.2c1.9-1.5 3.1-3.8 3.1-6.3V538.7c0-3.4-2.2-6.4-5.4-7.5zM826 763.7L688 871.6 550 763.7V577l138-48 138 48v186.7z"
                  />
                </svg>
              </span>
            </div>
            <div
              class="ant-space-item"
              style="margin-right: 4px;"
            >
              <span>
                Permits
              </span>
            </div>
            <div
              class="ant-space-item"
            >
              <span
                class="search-filters__count"
              >
                (
                8
                )
              </span>
            </div>
          </div>
        </span>
      </div>
      <div
        class="ant-space-item"
        style="margin-right: 4px; padding-bottom: 4px;"
      >
        <span
          class="ant-tag ant-tag-checkable search-filters__tag"
          style="border: 1px solid #d9d9d9; color: rgb(89, 89, 89);"
        >
          <div
            class="ant-space ant-space-horizontal ant-space-align-center"
          >
            <div
              class="ant-space-item"
              style="margin-right: 4px;"
            >
              <span
                aria-label="alert"
                class="anticon anticon-alert"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="alert"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M193 796c0 17.7 14.3 32 32 32h574c17.7 0 32-14.3 32-32V563c0-176.2-142.8-319-319-319S193 386.8 193 563v233zm72-233c0-136.4 110.6-247 247-247s247 110.6 247 247v193H404V585c0-5.5-4.5-10-10-10h-44c-5.5 0-10 4.5-10 10v171h-75V563zm-48.1-252.5l39.6-39.6c3.1-3.1 3.1-8.2 0-11.3l-67.9-67.9a8.03 8.03 0 00-11.3 0l-39.6 39.6a8.03 8.03 0 000 11.3l67.9 67.9c3.1 3.1 8.1 3.1 11.3 0zm669.6-79.2l-39.6-39.6a8.03 8.03 0 00-11.3 0l-67.9 67.9a8.03 8.03 0 000 11.3l39.6 39.6c3.1 3.1 8.2 3.1 11.3 0l67.9-67.9c3.1-3.2 3.1-8.2 0-11.3zM832 892H192c-17.7 0-32 14.3-32 32v24c0 4.4 3.6 8 8 8h688c4.4 0 8-3.6 8-8v-24c0-17.7-14.3-32-32-32zM484 180h56c4.4 0 8-3.6 8-8V76c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v96c0 4.4 3.6 8 8 8z"
                  />
                </svg>
              </span>
            </div>
            <div
              class="ant-space-item"
              style="margin-right: 4px;"
            >
              <span>
                Explosives
              </span>
            </div>
            <div
              class="ant-space-item"
            >
              <span
                class="search-filters__count"
              >
                (
                2
                )
              </span>
            </div>
          </div>
        </span>
      </div>
      <div
        class="ant-space-item"
        style="margin-right: 4px; padding-bottom: 4px;"
      >
        <span
          class="ant-tag ant-tag-checkable search-filters__tag"
          style="border: 1px solid #d9d9d9; color: rgb(89, 89, 89);"
        >
          <div
            class="ant-space ant-space-horizontal ant-space-align-center"
          >
            <div
              class="ant-space-item"
              style="margin-right: 4px;"
            >
              <span
                aria-label="file-search"
                class="anticon anticon-file-search"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="file-search"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M688 312v-48c0-4.4-3.6-8-8-8H296c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h384c4.4 0 8-3.6 8-8zm-392 88c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h184c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H296zm144 452H208V148h560v344c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V108c0-17.7-14.3-32-32-32H168c-17.7 0-32 14.3-32 32v784c0 17.7 14.3 32 32 32h272c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm445.7 51.5l-93.3-93.3C814.7 780.7 828 743.9 828 704c0-97.2-78.8-176-176-176s-176 78.8-176 176 78.8 176 176 176c35.8 0 69-10.7 96.8-29l94.7 94.7c1.6 1.6 3.6 2.3 5.6 2.3s4.1-.8 5.6-2.3l31-31a7.9 7.9 0 000-11.2zM652 816c-61.9 0-112-50.1-112-112s50.1-112 112-112 112 50.1 112 112-50.1 112-112 112z"
                  />
                </svg>
              </span>
            </div>
            <div
              class="ant-space-item"
              style="margin-right: 4px;"
            >
              <span>
                NoW
              </span>
            </div>
            <div
              class="ant-space-item"
            >
              <span
                class="search-filters__count"
              >
                (
                4
                )
              </span>
            </div>
          </div>
        </span>
      </div>
      <div
        class="ant-space-item"
        style="margin-right: 4px; padding-bottom: 4px;"
      >
        <span
          class="ant-tag ant-tag-checkable search-filters__tag"
          style="border: 1px solid #d9d9d9; color: rgb(89, 89, 89);"
        >
          <div
            class="ant-space ant-space-horizontal ant-space-align-center"
          >
            <div
              class="ant-space-item"
              style="margin-right: 4px;"
            >
              <span
                aria-label="exception"
                class="anticon anticon-exception"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="exception"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M688 312v-48c0-4.4-3.6-8-8-8H296c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h384c4.4 0 8-3.6 8-8zm-392 88c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h184c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H296zm376 116c-119.3 0-216 96.7-216 216s96.7 216 216 216 216-96.7 216-216-96.7-216-216-216zm107.5 323.5C750.8 868.2 712.6 884 672 884s-78.8-15.8-107.5-44.5C535.8 810.8 520 772.6 520 732s15.8-78.8 44.5-107.5C593.2 595.8 631.4 580 672 580s78.8 15.8 107.5 44.5C808.2 653.2 824 691.4 824 732s-15.8 78.8-44.5 107.5zM640 812a32 32 0 1064 0 32 32 0 10-64 0zm12-64h40c4.4 0 8-3.6 8-8V628c0-4.4-3.6-8-8-8h-40c-4.4 0-8 3.6-8 8v112c0 4.4 3.6 8 8 8zM440 852H208V148h560v344c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V108c0-17.7-14.3-32-32-32H168c-17.7 0-32 14.3-32 32v784c0 17.7 14.3 32 32 32h272c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8z"
                  />
                </svg>
              </span>
            </div>
            <div
              class="ant-space-item"
              style="margin-right: 4px;"
            >
              <span>
                NODs
              </span>
            </div>
            <div
              class="ant-space-item"
            >
              <span
                class="search-filters__count"
              >
                (
                1
                )
              </span>
            </div>
          </div>
        </span>
      </div>
      <div
        class="ant-space-item"
        style="padding-bottom: 4px;"
      >
        <span
          class="ant-tag ant-tag-checkable search-filters__tag"
          style="border: 1px solid #d9d9d9; color: rgb(89, 89, 89);"
        >
          <div
            class="ant-space ant-space-horizontal ant-space-align-center"
          >
            <div
              class="ant-space-item"
              style="margin-right: 4px;"
            >
              <span
                aria-label="file-search"
                class="anticon anticon-file-search"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="file-search"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M688 312v-48c0-4.4-3.6-8-8-8H296c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h384c4.4 0 8-3.6 8-8zm-392 88c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h184c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H296zm144 452H208V148h560v344c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V108c0-17.7-14.3-32-32-32H168c-17.7 0-32 14.3-32 32v784c0 17.7 14.3 32 32 32h272c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm445.7 51.5l-93.3-93.3C814.7 780.7 828 743.9 828 704c0-97.2-78.8-176-176-176s-176 78.8-176 176 78.8 176 176 176c35.8 0 69-10.7 96.8-29l94.7 94.7c1.6 1.6 3.6 2.3 5.6 2.3s4.1-.8 5.6-2.3l31-31a7.9 7.9 0 000-11.2zM652 816c-61.9 0-112-50.1-112-112s50.1-112 112-112 112 50.1 112 112-50.1 112-112 112z"
                  />
                </svg>
              </span>
            </div>
            <div
              class="ant-space-item"
              style="margin-right: 4px;"
            >
              <span>
                Documents
              </span>
            </div>
            <div
              class="ant-space-item"
            >
              <span
                class="search-filters__count"
              >
                (
                22
                )
              </span>
            </div>
          </div>
        </span>
      </div>
    </div>
  </div>
</div>
`;
